force-app/main/default/objects/Player_Entitlement__c/Player_Entitlement__c.object-meta.xml
<CustomObject>
    <label>Player Entitlement</label>
    <pluralLabel>Player Entitlements</pluralLabel>
    <nameField>
        <label>Entitlement Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tracks what replacement, discount, firmware, or module path a player is eligible for at a given time. Drives the controller health recommendation type. Created from CSV seed data; updated by eligibility logic. previewOnly=true; no real fulfillment actions are triggered.</description>
</CustomObject>