force-app/main/default/objects/Player_Entitlement__c/fields/Eligible_Product__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Product__c</fullName>
    <label>Eligible Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Player Entitlements</relationshipLabel>
    <relationshipName>Player_Entitlements</relationshipName>
    <type>Lookup</type>
    <description>The default eligible product for this entitlement (e.g. DS-STANDARD for Sarah, DS-EDGE-MODULE for Alex). Null for FIRMWARE_ONLY entitlements. Resolved by ProductCode during data load.</description>
</CustomField>