force-app/main/default/objects/Player_Entitlement__c/fields/Entitlement_Source__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Source__c</fullName>
    <label>Entitlement Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>WARRANTY</fullName><default>false</default><label>Warranty</label></value>
            <value><fullName>LOYALTY</fullName><default>false</default><label>Loyalty Program</label></value>
            <value><fullName>PS_PLUS</fullName><default>false</default><label>PS Plus</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>Business reason the entitlement was granted. WARRANTY for Sarah, Nina, Alex. LOYALTY for Marcus (Platinum tier personalized offer).</description>
</CustomField>