force-app/main/default/objects/Player_Entitlement__c/fields/Entitlement_Type__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Type__c</fullName>
    <label>Entitlement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>FREE_REPLACEMENT</fullName><default>false</default><label>Free Replacement</label></value>
            <value><fullName>DISCOUNTED_UPGRADE</fullName><default>false</default><label>Discounted Upgrade</label></value>
            <value><fullName>FIRMWARE_ONLY</fullName><default>false</default><label>Firmware Only</label></value>
            <value><fullName>MODULE_REPLACEMENT</fullName><default>false</default><label>Module Replacement</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>Type of resolution the player is eligible for. Maps to recommendation.type in the React response contract.</description>
</CustomField>