force-app/main/default/objects/Player_Entitlement__c/fields/External_Entitlement_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Entitlement_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Entitlement ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
    <description>Stable external key for upsert from CSV seed data. Values: ENT-001, ENT-002A, ENT-002B, ENT-002C, ENT-003, ENT-004.</description>
</CustomField>