force-app/main/default/objects/Player_Entitlement__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
    <description>Whether this entitlement is currently active. All demo seed records are true.</description>
</CustomField>