force-app/main/default/objects/Player_Entitlement__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Internal notes about this entitlement. Not forwarded to the frontend. Internal use only.</description>
</CustomField>