force-app/main/default/objects/Player_Entitlement__c/fields/Player_ID__c.field-meta.xml
<CustomField>
    <fullName>Player_ID__c</fullName>
    <label>Player ID</label>
    <length>20</length>
    <type>Text</type>
    <description>External player identifier cross-referencing Contact.Player_ID__c. Values: PLAYER001–PLAYER004. Used for data load association and middleware queries.</description>
</CustomField>