force-app/main/default/objects/Player_Entitlement__c/fields/Promotional_Price__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Price__c</fullName>
    <label>Promotional Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>Player-specific final price for this entitlement. 0.00 for free replacement (Sarah). Promotional values for Marcus (49.99, 129.99, 109.99). 59.99 for Alex module. Null for FIRMWARE_ONLY. Maps to eligibleOptions[].finalPrice in the response contract.</description>
</CustomField>