force-app/main/default/objects/Player_Entitlement__c/fields/Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Valid_From__c</fullName>
    <label>Valid From</label>
    <type>Date</type>
    <description>Date from which this entitlement is active and eligible for use.</description>
</CustomField>