force-app/main/default/objects/Player_Entitlement__c/fields/Valid_To__c.field-meta.xml
<CustomField>
    <fullName>Valid_To__c</fullName>
    <label>Valid To</label>
    <type>Date</type>
    <description>Date on which this entitlement expires. All demo entitlements are valid through 2025-12-31.</description>
</CustomField>